# PROJ1-STAT

./: .gitignore  analysis.ipynb  generate_demos.sh  hypothesis_test.ipynb  readme.md
analysis/: base.ipynb
analysis/common/: consts.py  hip.py  models.py  simulation.py
analysis/rustysimulator/: Cargo.toml  pyproject.toml
datasets/100-0_01-25/: 100-0_01-25-9999999-0-1666291392894.json  100-0_01-25-9999999-0-1666291393494.json  100-0_01-25-9999999-0-1666291393910.json  100-0_01-25-999999999-0-1665956821892.json  100-0_01-25-999999999-0-1665956823812.json  100-0_01-25-999999999-0-1665956825092.json  sample-0.json  sample-1.json  sample-2.json
datasets/50-0_006-10/: 50-0_006-10-9999999-0-1666291380494.json  50-0_006-10-9999999-0-1666291381214.json  50-0_006-10-9999999-0-1666291381710.json  50-0_006-10-999999999-0-1665956790277.json  50-0_006-10-999999999-0-1665956791693.json  50-0_006-10-999999999-0-1665956792860.json  sample-0.json  sample-1.json  sample-2.json
datasets/auto/: 1000-100-0.001-50-12-0.001-default.json  1000-100-0.001-54-12-0.001-default.json  1000-100-0.001-55-12-0.001-default.json  1000-100-0.001-56-12-0.001-default.json  1000-100-0.001-57-12-0.001-default.json  1000-100-0.001-63-12-0.001-default.json  1000-100-0.001-75-12-0.001-default.json  1000-50-0.01-12-6-0.001-default.json  1000-50-0.01-19-6-0.001-default.json  1000-50-0.01-22-6-0.001-default.json  (+39 more)
simulador-pygame/: Machine.py  Manager.py  Vec2.py  main.py
simulation_vulkan/: temp.txt
simulator/: simulator.py
simulators/vulkan/: Cargo.toml
simulators/vulkan/src/: shader.rs
(+42 files in other folders)
