[package]
name = "simulation_vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.8.0"
vulkano = "0.29.0"
vulkano-shaders = "0.29.0"



rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.5.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"